--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo- List App in JavaScript</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="todo-app">
             <h2>Todo-List <img src="images/icon.png"> </h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add Your Text">
+                <button onclick="addClick()">Add</button>
+
+            </div>
+            <ul id="list-container">
+                <!-- <li class="checked">List 1</li>
+                <li>List 2</li>
+                <li>List 3</li> -->
+            </ul>
         </div>
     </div>
-       
+    <script src="script.js"></script>
 </body>
+
 </html>
